# unit-commitment-problem-application

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  ruff.toml
data/: demand_sample.csv  generator_parameters_sample.csv
dev/: generatoe_input.py
src/logic/: postprocess.py  preprocess.py  visualize.py
src/models/: solver.py
src/pipelines/: create_output.py  run_optimization.py  run_postprocess.py  run_preprocess.py
src/schemas/: data_schema.py
src/utils/: safe_cast.py
